[gd_scene load_steps=15 format=2]

[ext_resource path="res://src/scenes/battle_scene/StartBattleText.tscn" type="PackedScene" id=1]
[ext_resource path="res://src/scenes/battle_scene/MoneyTracker.gd" type="Script" id=2]
[ext_resource path="res://data/Fonts/InGameFont.tres" type="DynamicFont" id=3]
[ext_resource path="res://src/utility/GameManager.gd" type="Script" id=4]
[ext_resource path="res://src/objects/enviroment/Ground.tscn" type="PackedScene" id=5]
[ext_resource path="res://src/objects/bases/AllyBase.tscn" type="PackedScene" id=6]
[ext_resource path="res://src/objects/bases/EnemyBase.tscn" type="PackedScene" id=7]
[ext_resource path="res://src/scenes/battle_scene/bagelbkg_g.png" type="Texture" id=8]
[ext_resource path="res://src/scenes/battle_scene/GameOver.gd" type="Script" id=9]
[ext_resource path="res://src/scenes/battle_scene/Queue.gd" type="Script" id=10]
[ext_resource path="res://src/scenes/battle_scene/bagelbkg_mountn.png" type="Texture" id=11]
[ext_resource path="res://src/scenes/battle_scene/bad_bagelscastle.png" type="Texture" id=12]
[ext_resource path="res://src/scenes/battle_scene/bagelscastle.png" type="Texture" id=13]
[ext_resource path="res://src/scenes/battle_scene/bagelbkg_cloud.png" type="Texture" id=14]

[node name="BattleScene" type="Node2D"]
position = Vector2( -1, 0 )

[node name="Ground" parent="." instance=ExtResource( 5 )]
visible = false
position = Vector2( 950, 1030 )
scale = Vector2( 2, 16 )

[node name="GameManager" type="Node2D" parent="."]
script = ExtResource( 4 )

[node name="EnemyBase" parent="." instance=ExtResource( 7 )]
position = Vector2( 1742, 951 )
health_points = 100

[node name="BadBagelscastle" type="Sprite" parent="EnemyBase"]
position = Vector2( 5, -90 )
texture = ExtResource( 12 )

[node name="AllyBase" parent="." instance=ExtResource( 6 )]
position = Vector2( 190, 951 )

[node name="Bagelscastle" type="Sprite" parent="AllyBase"]
position = Vector2( 1, -92 )
texture = ExtResource( 13 )

[node name="UserInterface" type="CanvasLayer" parent="."]
pause_mode = 2

[node name="MoneyTracker" type="Label" parent="UserInterface"]
anchor_left = 0.5
anchor_right = 0.5
margin_left = -928.0
margin_top = 78.0
margin_right = -706.0
margin_bottom = 174.0
custom_fonts/font = ExtResource( 3 )
text = "Dough"
align = 1
script = ExtResource( 2 )

[node name="Queue" type="Label" parent="UserInterface"]
margin_left = 23.0
margin_right = 243.0
margin_bottom = 195.0
custom_fonts/font = ExtResource( 3 )
text = "Queue
"
script = ExtResource( 10 )

[node name="GameOver" type="Control" parent="UserInterface"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
script = ExtResource( 9 )

[node name="BackToMenuButton" type="Button" parent="UserInterface/GameOver"]
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
margin_left = -279.0
margin_top = -50.0
margin_right = 279.0
margin_bottom = 52.0
custom_fonts/font = ExtResource( 3 )
text = "Return to menu"

[node name="GameOverText" type="Label" parent="UserInterface/GameOver"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -160.5
margin_top = -150.0
margin_right = 160.5
margin_bottom = -54.0
custom_fonts/font = ExtResource( 3 )
text = "You lost!"
align = 1

[node name="StartBattleText" parent="." instance=ExtResource( 1 )]
position = Vector2( 968, 442 )
disable_countdown = true

[node name="BackGround" type="CanvasLayer" parent="."]
layer = -1

[node name="BagelbkgMountn" type="Sprite" parent="BackGround"]
position = Vector2( 964, 537 )
scale = Vector2( 1.01818, 1.01818 )
texture = ExtResource( 11 )

[node name="BagelbkgCloud" type="Sprite" parent="BackGround"]
position = Vector2( 971, 526 )
texture = ExtResource( 14 )

[node name="BagelbkgG" type="Sprite" parent="BackGround"]
position = Vector2( 962, 534 )
scale = Vector2( 1.01455, 1.01455 )
texture = ExtResource( 8 )

[connection signal="money_changed" from="GameManager" to="UserInterface/MoneyTracker" method="_on_GameManager_money_changed"]
[connection signal="game_over" from="EnemyBase" to="UserInterface/GameOver" method="_on_EnemyBase_game_over"]
[connection signal="game_over" from="AllyBase" to="UserInterface/GameOver" method="_on_AllyBase_game_over"]
[connection signal="queue_changed" from="AllyBase" to="UserInterface/Queue" method="_on_AllyBase_queue_changed"]
[connection signal="pressed" from="UserInterface/GameOver/BackToMenuButton" to="UserInterface/GameOver" method="_on_BackToMenuButton_pressed"]
